syntax = "proto3";

import "google/protobuf/empty.proto";

package todoPackage;

message CreateTodoDto {
    string text = 1;
}

message TodoDto {
    int32 id = 1;
    string text = 2;
}

message TodosDto {
    repeated TodoDto todos = 1;
}

service TodoService {
    rpc createTodo(CreateTodoDto) returns (TodoDto);

    rpc getTodos(google.protobuf.Empty) returns (TodosDto);
}
